keycloak/k8s/base/keycloak-ingress.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: right.lyrics
      http:
        paths:
          - path: /keycloak(/|$)(.*)
            backend:
              serviceName: keycloak
              servicePort: 8080
